2013-05-24 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-20010224-1.c:
	  STM8: Disable test that fails due to known CSE bug #1968.

2013-05-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Fix float negation, fix large stack-to-stack copy under high register pressure, fix handling of immediate operands.
	* support/regression/tests/gcc-torture-execute-20030408-1.c:
	  STM8: Disable test for known front-end bug.
	* sim/ucsim/stm8.src/inst.cc:
	  STM8: Fix handling of V and H flags in cpw.
	* sim/ucsim/stm8.src/inst.cc:
	  STM8: Silence some warnings.
	* src/stm8/ralloc.c:
	  STM8: Fix missing include.
	* support/regression/tests/gcc-torture-execute-20050613-1.c:
	  STM8: Disable regression test that fails due to front-end bug.

2013-05-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: More efficient xor, or, and. Fix overwriting of shift count in shifts, fix comparison with upper byte in a, fix long comparison stacked offset, fix unsigned long / unsigned long long comparison.

2013-05-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c:
	  STM8: Disable broken optimization of comparisons into and.
	* src/stm8/gen.c:
	  STM8: Slightly more efficient shifts, fix long ifx, fix use of word rotation in copy, fix handling of a in signed cast.

2013-05-21 Valentin Dudouyt <valentin dudouyt AT gmail.com>

	* src/stm8/main.c,
	* src/SDCCglue.c:
	STM8: Fixed init code: some of GSINIT parts aren't executed under certain linking conditions.

2013-05-20 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/scripts/sdcc.nsi: added RequestExecutionLevel admin

2013-05-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  More efficient cast from _Bool,
	* src/z80/peep.c:
	  Fix recognition of xor as writing a in peepholes.

2013-05-20 Maarten Brock <sourceforge.brock AT dse.nl>

	* Small Device C Compiler 3.3.0 released
	* .version, doc/sdccman.lyx: changed sdcc version to 3.3.1
